Copied info over, formatting incomplete

--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<title>Helena Lynd</title>
+</head>
+<body>
+	<h1>Helena Lynd</h1>
+	<p>
+		Address: Pittsford, NY | Phone: Available Upon Request | Email: hml9034@gmail.com | GitHub: <a href="https://github.com/Helena-Lynd">Helena-Lynd</a>
+	</p>
+	<hr>
+	<h2>Objective</h2>
+	<p>
+		Passionate, hard-working student seeking a software engineering co-op or internship for Spring - Summer 2024.
+	</p>
+	<hr>
+	<h2>Education</h2>
+	<p> Rochester Institute of Technology
+		<ul>
+			<li><i>Bachelor of Science in Software Engineering, Expected Graduation Date: May 2026</i></li>
+			<li>GPA: 3.77</li>
+			<li>Minors: Computer Engineering, Computing Security</li>
+			<li>Honors: Dean's List (Spring 2021 - Present), Presidential Scholarship</li>
+		<ul>
+	</p>
+	<hr>
+	<h2>Work Experience</h2>
+	<p>
+		<i>Office Support, RIT Simone Center for Innovation and Entrepreneurship (June 2022 - Present)</i>
+		<ul>
+			<li>Assist with various tasks such as creating graphics in Photoshop, organizing events, and managing student outreach programs.</li>
+		</ul>
+
+		<i>Team Member, EEP Quality Group (June 2021 - August 2021)</i>
+		<ul>
+			<li>Worked in assembly and quality control, creating and inspecting fuel cells for the company Plug Power as well as automatic pill crushers.</li>
+		</ul>
+	</p>
+	<hr>
+	<h2>Skills</h2>
+	<p>
+		Programming Languages: Python, Java, SQL, TypeScript, HTML, CSS, C, Assembly, VHDL
+		<br>
+		Platforms and Frameworks: Windows, Linux (Ubuntu), Git, Angular
+	</p>
+	<hr>
+	<h2>Projects</h2>
+	<p>
+		MatchMaker (Python and PostgreSQL)
+		<ul>
+			<li>Independently developed a dating service that creates a feed of potential matches based on the users given location and preferences.</li>
+		</ul>
+		<br>
+		E-Store Website (Java and Angular)
+		<ul>
+			<li>Worked with a small team of students throughout four sprints to develop a bakery e-store with both administrator and customer services.</li>
+		</ul>
+		<br>
+		Slide Puzzle Game (Java)
+		<ul>
+			<li>Developed a GUI interface that allows the user to play a slide puzzle, with a “hint” button which performs the next step of the puzzle.</li>
+		</ul>
+		<br>
+		Designing a MIPS Processor (VHDL)
+		<ul>
+			<li>Designed each of the central components of a MIPS processor, with peer review sessions after each component.</li>
+		</ul>
+
+	</p>
+	<hr>
+	<h2>Extracurriculars</h2>
+	<p>
+		Member, Women in Engineering <i>(September 2022 - Present)</i>
+		<ul>
+			<li>Attend monthly sessions to connect with women in STEM and learn how to succeed in traditionally male dominated fields.</li>
+		</ul>
+		<br>
+		Member, Archery Club <i>(September 2021 - May 2022)</i>
+	</p>
+</body>
+</html>
