--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="resume-header-div">
 		<h1>Helena Lynd</h1>
-		<p>Address: Pittsford, NY | Phone: Available Upon Request | Email: hml9034@gmail.com | GitHub: <a href="https://github.com/Helena-Lynd">Helena-Lynd</a></p>
+		<p>Address: Pittsford, NY | Phone: Available Upon Request | Email: hml9034@gmail.com | GitHub: <a href="https://github.com/Helena-Lynd">Helena-Lynd</a> | LinkedIn: <a href="https://www.linkedin.com/in/helena-lynd/">Helena-Lynd</a></p>
 	</div>
 	
 	<div class="resume-objective-div">
@@ -45,7 +45,7 @@
 	
 	<div class="resume-p-div">
 		<p>
-			<i>Office Support, RIT Simone Center for Innovation and Entrepreneurship (June 2022 - Present)</i>
+			Office Support, RIT Simone Center for Innovation and Entrepreneurship <i>(June 2022 - Present)</i>
 			<ul>
 				<li>Assist with various tasks such as creating graphics in Photoshop, organizing events, and managing student outreach programs.</li>
 			</ul>
