--- a/index.html
+++ b/index.html
@@ -40,6 +40,19 @@
 	</div>
 	
 	<div class="resume-h2-div">
+		<h2>Skills</h2><h3> ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●</h3>
+	</div>
+	
+	<div class="resume-p-div">
+		<p>
+			Programming Languages: Python, Java, SQL, TypeScript, HTML, CSS, C, Assembly, VHDL
+			<br>
+			<br>
+			Platforms and Frameworks: Windows, Linux (Ubuntu), Git, Angular
+		</p>
+	</div>
+	
+	<div class="resume-h2-div">
 		<h2>Work Experience</h2><h3> ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●</h3>
 	</div>
 	
@@ -59,19 +72,6 @@
 	</div>
 	
 	<div class="resume-h2-div">
-		<h2>Skills</h2><h3> ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●</h3>
-	</div>
-	
-	<div class="resume-p-div">
-		<p>
-			Programming Languages: Python, Java, SQL, TypeScript, HTML, CSS, C, Assembly, VHDL
-			<br>
-			<br>
-			Platforms and Frameworks: Windows, Linux (Ubuntu), Git, Angular
-		</p>
-	</div>
-	
-	<div class="resume-h2-div">
 		<h2>Projects</h2><h3> ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●</h3>
 	</div>
 	
@@ -79,25 +79,25 @@
 		<p>
 			MatchMaker (Python and PostgreSQL)
 			<ul>
-				<li>Independently developed a dating service that creates a feed of potential matches based on the users given location and preferences.</li>
+				<li>Independently developed a dating service that creates a feed of potential matches using PostgreSQL to store user information, and a Python API to query the server and interface with the client.</li>
 			</ul>
 		</p>
 		<p>
 			E-Store Website (Java and Angular)
 			<ul>
-				<li>Worked with a small team of students throughout four sprints to develop a bakery e-store with both administrator and customer services.</li>
+				<li>Collaborated with a small team throughout four sprints to develop a bakery e-store using a Java API and Angular front-end, complete with thorough documentation and unit tests.</li>
 			</ul>
 		</p>
 		<p>
 			Slide Puzzle Game (Java)
 			<ul>
-				<li>Developed a GUI interface that allows the user to play a slide puzzle, with a “hint” button which performs the next step of the puzzle.</li>
+				<li>Independently developed a GUI interface using the MVC model that allows the user to play a slide puzzle, with a “hint” button which performs the next step of the puzzle.</li>
 			</ul>
 		</p>
 		<p>
 			Designing a MIPS Processor (VHDL)
 			<ul>
-				<li>Designed each of the central components of a MIPS processor, with peer review sessions after each component.</li>
+				<li>Independently designed each of the central components of a MIPS processor with a testbench to ensure proper functionality and peer review after each component.</li>
 			</ul>
 		</p>
 	</div>
