--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<div class="resume-header-div">
 		<h1>Helena Lynd</h1>
-		<p>Address: Pittsford, NY | Phone: Available Upon Request | Email: hml9034@gmail.com | GitHub: <a href="https://github.com/Helena-Lynd">Helena-Lynd</a> | LinkedIn: <a href="https://www.linkedin.com/in/helena-lynd/">Helena-Lynd</a></p>
+		<p>Address: Pittsford, NY | Phone: Available Upon Request | Email: hml9034@rit.edu | GitHub: <a href="https://github.com/Helena-Lynd">Helena-Lynd</a> | LinkedIn: <a href="https://www.linkedin.com/in/helena-lynd/">Helena-Lynd</a></p>
 	</div>
 	
 	<div class="resume-objective-div">
@@ -32,7 +32,7 @@
 		<p> Rochester Institute of Technology<br>
 		<i>Bachelor of Science in Software Engineering, Expected Graduation Date: May 2026</i>
 			<ul>
-				<li>GPA: 3.77</li>
+				<li>GPA: 3.82</li>
 				<li>Minors: Computer Engineering, Computing Security</li>
 				<li>Honors: Dean's List (Spring 2021 - Present), Presidential Scholarship</li>
 			</ul>
@@ -45,10 +45,10 @@
 	
 	<div class="resume-p-div">
 		<p>
-			Programming Languages: Python, Java, SQL, TypeScript, HTML, CSS, C, Assembly, VHDL
+			Programming Languages: Python, Java, SQL, Javascript, HTML, CSS, C, Assembly, VHDL
 			<br>
 			<br>
-			Platforms and Frameworks: Windows, Linux (Ubuntu), Git, Angular
+			Platforms and Frameworks: Windows, Linux (Ubuntu), Git, React
 		</p>
 	</div>
 	
@@ -60,7 +60,7 @@
 		<p>
 			Office Support, RIT Simone Center for Innovation and Entrepreneurship <i>(June 2022 - Present)</i>
 			<ul>
-				<li>Assist with various tasks such as creating graphics in Photoshop, organizing events, and managing student outreach programs.</li>
+				<li>Assist with various tasks such as organizing events, creating graphics in Photoshop, and managing student outreach programs.</li>
 			</ul>
 		</p>
 		<p>
@@ -77,9 +77,9 @@
 	
 	<div class="resume-p-div">
 		<p>
-			MatchMaker (Python and PostgreSQL)
+			Sort the Games (React)
 			<ul>
-				<li>Independently developed a dating service that creates a feed of potential matches using PostgreSQL to store user information, and a Python API to query the server and interface with the client.</li>
+				<li>Worked over the summer to independently develop a web game using React, where users drag and drop tiles in a grid to match four of the same type in a row or column in a limited number of moves.</li>
 			</ul>
 		</p>
 		<p>
