Updating projects section of resume

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</div>
 	
 	<div class="resume-p-div">
-		<p>Passionate, hard-working student seeking a software engineering co-op or internship for Spring - Summer 2024.</p>
+		<p>Passionate, hard-working student seeking a software engineering co-op or internship for January 2024 - August 2024.</p>
 	</div>
 	
 	<div class="resume-h2-div">
@@ -53,25 +53,6 @@
 	</div>
 	
 	<div class="resume-h2-div">
-		<h2>Work Experience</h2><h3> ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●</h3>
-	</div>
-	
-	<div class="resume-p-div">
-		<p>
-			Office Support, RIT Simone Center for Innovation and Entrepreneurship <i>(June 2022 - Present)</i>
-			<ul>
-				<li>Assist with various tasks such as organizing events, creating graphics in Photoshop, and managing student outreach programs.</li>
-			</ul>
-		</p>
-		<p>
-			Team Member, EEP Quality Group <i>(June 2021 - August 2021)</i>
-			<ul>
-				<li>Worked in assembly and quality control, creating and inspecting fuel cells for the company Plug Power as well as automatic pill crushers.</li>
-			</ul>
-		</p>
-	</div>
-	
-	<div class="resume-h2-div">
 		<h2>Projects</h2><h3> ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●</h3>
 	</div>
 	
@@ -79,25 +60,47 @@
 		<p>
 			Sort the Games (React)
 			<ul>
-				<li>Worked over the summer to independently develop a web game using React, where users drag and drop tiles in a grid to match four of the same type in a row or column in a limited number of moves.</li>
+				<li>Developed a web-based game using React independently over the summer</li>
+				<li>Main objective: Arrange tiles in a grid to match four of the same type in a row or column</li>
+				<li>Implemented drag and drop functionality for tile manipulation</li>
+				<li>Encouraged strategic thinking in players by limiting the number of available moves</li>
 			</ul>
+
 		</p>
 		<p>
 			E-Store Website (Java and Angular)
 			<ul>
-				<li>Collaborated with a small team throughout four sprints to develop a bakery e-store using a Java API and Angular front-end, complete with thorough documentation and unit tests.</li>
-			</ul>
-		</p>
-		<p>
-			Slide Puzzle Game (Java)
-			<ul>
-				<li>Independently developed a GUI interface using the MVC model that allows the user to play a slide puzzle, with a “hint” button which performs the next step of the puzzle.</li>
+				<li>Collaborated with a small team to develop a bakery e-store using a Java API and Angular</li>
+				<li>Used four sprint iterations following Agile methodology</li>
+				<li>Emphasized thorough documentation and unit testing</li>
+				<li>Deployed to a production environment with scalability considerations</li>
 			</ul>
 		</p>
 		<p>
 			Designing a MIPS Processor (VHDL)
 			<ul>
-				<li>Independently designed each of the central components of a MIPS processor with a testbench to ensure proper functionality and peer review after each component.</li>
+				<li>Independently designed each of the central components of a MIPS processor using VHDL</li>
+				<li>Utilized testbenches for each component to ensure correct functionality</li>
+				<li>Conducted peer review after designing each component to consider improvements</li>
+			</ul>
+		</p>
+	</div>
+	
+	<div class="resume-h2-div">
+		<h2>Work Experience</h2><h3> ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ● ●</h3>
+	</div>
+	
+	<div class="resume-p-div">
+		<p>
+			Office Support, RIT Simone Center for Innovation and Entrepreneurship <i>(June 2022 - Present)</i>
+			<ul>
+				<li>Assist with organizing events, creating graphics in Photoshop, and managing student outreach programs.</li>
+			</ul>
+		</p>
+		<p>
+			Team Member, EEP Quality Group <i>(June 2021 - August 2021)</i>
+			<ul>
+				<li>Worked in assembly and quality control, creating and inspecting fuel cells for the company Plug Power as well as automatic pill crushers.</li>
 			</ul>
 		</p>
 	</div>
@@ -110,12 +113,8 @@
 		<p>
 			Member, Women in Engineering <i>(September 2022 - Present)</i>
 			<ul>
-				<li>Attend monthly sessions to connect with women in STEM and learn how to succeed in traditionally male dominated fields.</li>
+				<li>Regularly attended monthly workshops focused on diverse professional topics, such as communication, teamwork, and leadership development.</li>
 			</ul>
-		</p>
-		<p>
-			Member, Archery Club <i>(September 2021 - May 2022)</i>
-			<br>
 		</p>
 	</div>
 </body>
